// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Library gets full tracks with genres and features 1`] = `
{
  "meta": {
    "date_generated": "1970-01-01T00:00:00.000Z",
    "saved_tracks_output_type": "full",
  },
  "tracks": [
    {
      "added_at": "2021-12-06T17:17:57Z",
      "track": {
        "album": {
          "album_type": "single",
          "artists": [
            {
              "external_urls": {
                "spotify": "https://open.spotify.com/artist/03tes5RhEvH2dX2eDeGnRn",
              },
              "href": "https://api.spotify.com/v1/artists/03tes5RhEvH2dX2eDeGnRn",
              "id": "03tes5RhEvH2dX2eDeGnRn",
              "name": "Age Of Love",
              "type": "artist",
              "uri": "spotify:artist:03tes5RhEvH2dX2eDeGnRn",
            },
            {
              "external_urls": {
                "spotify": "https://open.spotify.com/artist/1lJhME1ZpzsEa5M0wW6Mso",
              },
              "href": "https://api.spotify.com/v1/artists/1lJhME1ZpzsEa5M0wW6Mso",
              "id": "1lJhME1ZpzsEa5M0wW6Mso",
              "name": "Charlotte de Witte",
              "type": "artist",
              "uri": "spotify:artist:1lJhME1ZpzsEa5M0wW6Mso",
            },
            {
              "external_urls": {
                "spotify": "https://open.spotify.com/artist/1u7DsNFbakULvxnDGtMm90",
              },
              "href": "https://api.spotify.com/v1/artists/1u7DsNFbakULvxnDGtMm90",
              "id": "1u7DsNFbakULvxnDGtMm90",
              "name": "Enrico Sangiuliano",
              "type": "artist",
              "uri": "spotify:artist:1u7DsNFbakULvxnDGtMm90",
            },
          ],
          "available_markets": [
            "AD",
            "AE",
            "AG",
            "AL",
            "AM",
            "AO",
            "AR",
            "AT",
            "AU",
            "AZ",
            "BA",
            "BB",
            "BD",
            "BE",
            "BF",
            "BG",
            "BH",
            "BI",
            "BJ",
            "BN",
            "BO",
            "BR",
            "BS",
            "BT",
            "BW",
            "BY",
            "BZ",
            "CA",
            "CD",
            "CG",
            "CH",
            "CI",
            "CL",
            "CM",
            "CO",
            "CR",
            "CV",
            "CW",
            "CY",
            "CZ",
            "DE",
            "DJ",
            "DK",
            "DM",
            "DO",
            "DZ",
            "EC",
            "EE",
            "EG",
            "ES",
            "FI",
            "FJ",
            "FM",
            "FR",
            "GA",
            "GB",
            "GD",
            "GE",
            "GH",
            "GM",
            "GN",
            "GQ",
            "GR",
            "GT",
            "GW",
            "GY",
            "HK",
            "HN",
            "HR",
            "HT",
            "HU",
            "ID",
            "IE",
            "IL",
            "IN",
            "IQ",
            "IS",
            "IT",
            "JM",
            "JO",
            "JP",
            "KE",
            "KG",
            "KH",
            "KI",
            "KM",
            "KN",
            "KR",
            "KW",
            "KZ",
            "LA",
            "LB",
            "LC",
            "LI",
            "LK",
            "LR",
            "LS",
            "LT",
            "LU",
            "LV",
            "LY",
            "MA",
            "MC",
            "MD",
            "ME",
            "MG",
            "MH",
            "MK",
            "ML",
            "MN",
            "MO",
            "MR",
            "MT",
            "MU",
            "MV",
            "MW",
            "MX",
            "MY",
            "MZ",
            "NA",
            "NE",
            "NG",
            "NI",
            "NL",
            "NO",
            "NP",
            "NR",
            "NZ",
            "OM",
            "PA",
            "PE",
            "PG",
            "PH",
            "PK",
            "PL",
            "PS",
            "PT",
            "PW",
            "PY",
            "QA",
            "RO",
            "RS",
            "RU",
            "RW",
            "SA",
            "SB",
            "SC",
            "SE",
            "SG",
            "SI",
            "SK",
            "SL",
            "SM",
            "SN",
            "SR",
            "ST",
            "SV",
            "SZ",
            "TD",
            "TG",
            "TH",
            "TJ",
            "TL",
            "TN",
            "TO",
            "TR",
            "TT",
            "TV",
            "TW",
            "TZ",
            "UA",
            "UG",
            "US",
            "UY",
            "UZ",
            "VC",
            "VE",
            "VN",
            "VU",
            "WS",
            "XK",
            "ZA",
            "ZM",
            "ZW",
          ],
          "external_urls": {
            "spotify": "https://open.spotify.com/album/6Ozmnoay8pclUfUO8CWKLU",
          },
          "href": "https://api.spotify.com/v1/albums/6Ozmnoay8pclUfUO8CWKLU",
          "id": "6Ozmnoay8pclUfUO8CWKLU",
          "images": [
            {
              "height": 640,
              "url": "https://i.scdn.co/image/ab67616d0000b273c0eed84753e3e6a37e1b064e",
              "width": 640,
            },
            {
              "height": 300,
              "url": "https://i.scdn.co/image/ab67616d00001e02c0eed84753e3e6a37e1b064e",
              "width": 300,
            },
            {
              "height": 64,
              "url": "https://i.scdn.co/image/ab67616d00004851c0eed84753e3e6a37e1b064e",
              "width": 64,
            },
          ],
          "name": "The Age Of Love (Charlotte de Witte & Enrico Sangiuliano Remix)",
          "release_date": "2021-08-13",
          "release_date_precision": "day",
          "total_tracks": 1,
          "type": "album",
          "uri": "spotify:album:6Ozmnoay8pclUfUO8CWKLU",
        },
        "artists": [
          {
            "external_urls": {
              "spotify": "https://open.spotify.com/artist/03tes5RhEvH2dX2eDeGnRn",
            },
            "href": "https://api.spotify.com/v1/artists/03tes5RhEvH2dX2eDeGnRn",
            "id": "03tes5RhEvH2dX2eDeGnRn",
            "name": "Age Of Love",
            "type": "artist",
            "uri": "spotify:artist:03tes5RhEvH2dX2eDeGnRn",
          },
          {
            "external_urls": {
              "spotify": "https://open.spotify.com/artist/1lJhME1ZpzsEa5M0wW6Mso",
            },
            "href": "https://api.spotify.com/v1/artists/1lJhME1ZpzsEa5M0wW6Mso",
            "id": "1lJhME1ZpzsEa5M0wW6Mso",
            "name": "Charlotte de Witte",
            "type": "artist",
            "uri": "spotify:artist:1lJhME1ZpzsEa5M0wW6Mso",
          },
          {
            "external_urls": {
              "spotify": "https://open.spotify.com/artist/1u7DsNFbakULvxnDGtMm90",
            },
            "href": "https://api.spotify.com/v1/artists/1u7DsNFbakULvxnDGtMm90",
            "id": "1u7DsNFbakULvxnDGtMm90",
            "name": "Enrico Sangiuliano",
            "type": "artist",
            "uri": "spotify:artist:1u7DsNFbakULvxnDGtMm90",
          },
        ],
        "available_markets": [
          "AD",
          "AE",
          "AG",
          "AL",
          "AM",
          "AO",
          "AR",
          "AT",
          "AU",
          "AZ",
          "BA",
          "BB",
          "BD",
          "BE",
          "BF",
          "BG",
          "BH",
          "BI",
          "BJ",
          "BN",
          "BO",
          "BR",
          "BS",
          "BT",
          "BW",
          "BY",
          "BZ",
          "CA",
          "CD",
          "CG",
          "CH",
          "CI",
          "CL",
          "CM",
          "CO",
          "CR",
          "CV",
          "CW",
          "CY",
          "CZ",
          "DE",
          "DJ",
          "DK",
          "DM",
          "DO",
          "DZ",
          "EC",
          "EE",
          "EG",
          "ES",
          "FI",
          "FJ",
          "FM",
          "FR",
          "GA",
          "GB",
          "GD",
          "GE",
          "GH",
          "GM",
          "GN",
          "GQ",
          "GR",
          "GT",
          "GW",
          "GY",
          "HK",
          "HN",
          "HR",
          "HT",
          "HU",
          "ID",
          "IE",
          "IL",
          "IN",
          "IQ",
          "IS",
          "IT",
          "JM",
          "JO",
          "JP",
          "KE",
          "KG",
          "KH",
          "KI",
          "KM",
          "KN",
          "KR",
          "KW",
          "KZ",
          "LA",
          "LB",
          "LC",
          "LI",
          "LK",
          "LR",
          "LS",
          "LT",
          "LU",
          "LV",
          "LY",
          "MA",
          "MC",
          "MD",
          "ME",
          "MG",
          "MH",
          "MK",
          "ML",
          "MN",
          "MO",
          "MR",
          "MT",
          "MU",
          "MV",
          "MW",
          "MX",
          "MY",
          "MZ",
          "NA",
          "NE",
          "NG",
          "NI",
          "NL",
          "NO",
          "NP",
          "NR",
          "NZ",
          "OM",
          "PA",
          "PE",
          "PG",
          "PH",
          "PK",
          "PL",
          "PS",
          "PT",
          "PW",
          "PY",
          "QA",
          "RO",
          "RS",
          "RU",
          "RW",
          "SA",
          "SB",
          "SC",
          "SE",
          "SG",
          "SI",
          "SK",
          "SL",
          "SM",
          "SN",
          "SR",
          "ST",
          "SV",
          "SZ",
          "TD",
          "TG",
          "TH",
          "TJ",
          "TL",
          "TN",
          "TO",
          "TR",
          "TT",
          "TV",
          "TW",
          "TZ",
          "UA",
          "UG",
          "US",
          "UY",
          "UZ",
          "VC",
          "VE",
          "VN",
          "VU",
          "WS",
          "XK",
          "ZA",
          "ZM",
          "ZW",
        ],
        "disc_number": 1,
        "duration_ms": 489480,
        "explicit": false,
        "external_ids": {
          "isrc": "BEN582100445",
        },
        "external_urls": {
          "spotify": "https://open.spotify.com/track/6X6Ow0iioCrYQSK1QDHQbC",
        },
        "features": {
          "acousticness": 0.0576,
          "analysis_url": "https://api.spotify.com/v1/audio-analysis/6X6Ow0iioCrYQSK1QDHQbC",
          "danceability": 0.748,
          "duration_ms": 489480,
          "energy": 0.909,
          "id": "6X6Ow0iioCrYQSK1QDHQbC",
          "instrumentalness": 0.89,
          "key": 5,
          "liveness": 0.0945,
          "loudness": -8.322,
          "mode": 0,
          "speechiness": 0.0505,
          "tempo": 130,
          "time_signature": 4,
          "track_href": "https://api.spotify.com/v1/tracks/6X6Ow0iioCrYQSK1QDHQbC",
          "type": "audio_features",
          "uri": "spotify:track:6X6Ow0iioCrYQSK1QDHQbC",
          "valence": 0.0617,
        },
        "genres": [
          [
            "bubble trance",
          ],
          [
            "belgian techno",
            "electra",
          ],
          [
            "dark techno",
            "italian techno",
            "minimal techno",
          ],
        ],
        "href": "https://api.spotify.com/v1/tracks/6X6Ow0iioCrYQSK1QDHQbC",
        "id": "6X6Ow0iioCrYQSK1QDHQbC",
        "is_local": false,
        "name": "The Age Of Love - Charlotte de Witte & Enrico Sangiuliano Remix",
        "popularity": 67,
        "preview_url": "https://p.scdn.co/mp3-preview/4780ea982916a094f338b7af896e96e12cccdf44?cid=f40c6b31fa764aa3aad3665a54b14ffa",
        "track_number": 1,
        "type": "track",
        "uri": "spotify:track:6X6Ow0iioCrYQSK1QDHQbC",
      },
    },
    {
      "added_at": "2021-10-18T08:15:08Z",
      "track": {
        "album": {
          "album_type": "album",
          "artists": [
            {
              "external_urls": {
                "spotify": "https://open.spotify.com/artist/0jNDKefhfSbLR9sFvcPLHo",
              },
              "href": "https://api.spotify.com/v1/artists/0jNDKefhfSbLR9sFvcPLHo",
              "id": "0jNDKefhfSbLR9sFvcPLHo",
              "name": "San Holo",
              "type": "artist",
              "uri": "spotify:artist:0jNDKefhfSbLR9sFvcPLHo",
            },
          ],
          "available_markets": [
            "AD",
            "AE",
            "AG",
            "AL",
            "AM",
            "AO",
            "AR",
            "AT",
            "AU",
            "AZ",
            "BA",
            "BB",
            "BD",
            "BF",
            "BG",
            "BH",
            "BI",
            "BJ",
            "BN",
            "BO",
            "BR",
            "BS",
            "BT",
            "BW",
            "BY",
            "BZ",
            "CA",
            "CD",
            "CG",
            "CH",
            "CI",
            "CL",
            "CM",
            "CO",
            "CR",
            "CV",
            "CW",
            "CY",
            "CZ",
            "DE",
            "DJ",
            "DK",
            "DM",
            "DO",
            "DZ",
            "EC",
            "EE",
            "EG",
            "ES",
            "FI",
            "FJ",
            "FM",
            "FR",
            "GA",
            "GB",
            "GD",
            "GE",
            "GH",
            "GM",
            "GN",
            "GQ",
            "GR",
            "GT",
            "GW",
            "GY",
            "HN",
            "HR",
            "HT",
            "HU",
            "ID",
            "IE",
            "IL",
            "IN",
            "IQ",
            "IS",
            "IT",
            "JM",
            "JO",
            "JP",
            "KE",
            "KG",
            "KH",
            "KI",
            "KM",
            "KN",
            "KR",
            "KW",
            "KZ",
            "LA",
            "LB",
            "LC",
            "LI",
            "LK",
            "LR",
            "LS",
            "LT",
            "LV",
            "LY",
            "MA",
            "MC",
            "MD",
            "ME",
            "MG",
            "MH",
            "MK",
            "ML",
            "MN",
            "MR",
            "MT",
            "MU",
            "MV",
            "MW",
            "MX",
            "MY",
            "MZ",
            "NA",
            "NE",
            "NG",
            "NI",
            "NO",
            "NP",
            "NR",
            "NZ",
            "OM",
            "PA",
            "PE",
            "PG",
            "PH",
            "PK",
            "PL",
            "PS",
            "PT",
            "PW",
            "PY",
            "QA",
            "RO",
            "RS",
            "RU",
            "RW",
            "SA",
            "SB",
            "SC",
            "SE",
            "SG",
            "SI",
            "SK",
            "SL",
            "SM",
            "SN",
            "SR",
            "ST",
            "SV",
            "SZ",
            "TD",
            "TG",
            "TH",
            "TJ",
            "TL",
            "TN",
            "TO",
            "TR",
            "TT",
            "TV",
            "TZ",
            "UA",
            "UG",
            "US",
            "UY",
            "UZ",
            "VC",
            "VE",
            "VN",
            "VU",
            "WS",
            "XK",
            "ZA",
            "ZM",
            "ZW",
          ],
          "external_urls": {
            "spotify": "https://open.spotify.com/album/046wH7DEfUumC5h9ykIEkd",
          },
          "href": "https://api.spotify.com/v1/albums/046wH7DEfUumC5h9ykIEkd",
          "id": "046wH7DEfUumC5h9ykIEkd",
          "images": [
            {
              "height": 640,
              "url": "https://i.scdn.co/image/ab67616d0000b2738c2877b422fdee55ad880ead",
              "width": 640,
            },
            {
              "height": 300,
              "url": "https://i.scdn.co/image/ab67616d00001e028c2877b422fdee55ad880ead",
              "width": 300,
            },
            {
              "height": 64,
              "url": "https://i.scdn.co/image/ab67616d000048518c2877b422fdee55ad880ead",
              "width": 64,
            },
          ],
          "name": "bb u ok?",
          "release_date": "2021-06-04",
          "release_date_precision": "day",
          "total_tracks": 20,
          "type": "album",
          "uri": "spotify:album:046wH7DEfUumC5h9ykIEkd",
        },
        "artists": [
          {
            "external_urls": {
              "spotify": "https://open.spotify.com/artist/0jNDKefhfSbLR9sFvcPLHo",
            },
            "href": "https://api.spotify.com/v1/artists/0jNDKefhfSbLR9sFvcPLHo",
            "id": "0jNDKefhfSbLR9sFvcPLHo",
            "name": "San Holo",
            "type": "artist",
            "uri": "spotify:artist:0jNDKefhfSbLR9sFvcPLHo",
          },
          {
            "external_urls": {
              "spotify": "https://open.spotify.com/artist/1BjaGDkxwa2fb2pSCXlFXb",
            },
            "href": "https://api.spotify.com/v1/artists/1BjaGDkxwa2fb2pSCXlFXb",
            "id": "1BjaGDkxwa2fb2pSCXlFXb",
            "name": "Chet Porter",
            "type": "artist",
            "uri": "spotify:artist:1BjaGDkxwa2fb2pSCXlFXb",
          },
        ],
        "available_markets": [
          "AD",
          "AE",
          "AG",
          "AL",
          "AM",
          "AO",
          "AR",
          "AT",
          "AU",
          "AZ",
          "BA",
          "BB",
          "BD",
          "BF",
          "BG",
          "BH",
          "BI",
          "BJ",
          "BN",
          "BO",
          "BR",
          "BS",
          "BT",
          "BW",
          "BY",
          "BZ",
          "CA",
          "CD",
          "CG",
          "CH",
          "CI",
          "CL",
          "CM",
          "CO",
          "CR",
          "CV",
          "CW",
          "CY",
          "CZ",
          "DE",
          "DJ",
          "DK",
          "DM",
          "DO",
          "DZ",
          "EC",
          "EE",
          "EG",
          "ES",
          "FI",
          "FJ",
          "FM",
          "FR",
          "GA",
          "GB",
          "GD",
          "GE",
          "GH",
          "GM",
          "GN",
          "GQ",
          "GR",
          "GT",
          "GW",
          "GY",
          "HN",
          "HR",
          "HT",
          "HU",
          "ID",
          "IE",
          "IL",
          "IN",
          "IQ",
          "IS",
          "IT",
          "JM",
          "JO",
          "JP",
          "KE",
          "KG",
          "KH",
          "KI",
          "KM",
          "KN",
          "KR",
          "KW",
          "KZ",
          "LA",
          "LB",
          "LC",
          "LI",
          "LK",
          "LR",
          "LS",
          "LT",
          "LV",
          "LY",
          "MA",
          "MC",
          "MD",
          "ME",
          "MG",
          "MH",
          "MK",
          "ML",
          "MN",
          "MR",
          "MT",
          "MU",
          "MV",
          "MW",
          "MX",
          "MY",
          "MZ",
          "NA",
          "NE",
          "NG",
          "NI",
          "NO",
          "NP",
          "NR",
          "NZ",
          "OM",
          "PA",
          "PE",
          "PG",
          "PH",
          "PK",
          "PL",
          "PS",
          "PT",
          "PW",
          "PY",
          "QA",
          "RO",
          "RS",
          "RU",
          "RW",
          "SA",
          "SB",
          "SC",
          "SE",
          "SG",
          "SI",
          "SK",
          "SL",
          "SM",
          "SN",
          "SR",
          "ST",
          "SV",
          "SZ",
          "TD",
          "TG",
          "TH",
          "TJ",
          "TL",
          "TN",
          "TO",
          "TR",
          "TT",
          "TV",
          "TZ",
          "UA",
          "UG",
          "US",
          "UY",
          "UZ",
          "VC",
          "VE",
          "VN",
          "VU",
          "WS",
          "XK",
          "ZA",
          "ZM",
          "ZW",
        ],
        "disc_number": 1,
        "duration_ms": 311625,
        "explicit": false,
        "external_ids": {
          "isrc": "GBCFB2000275",
        },
        "external_urls": {
          "spotify": "https://open.spotify.com/track/3LnoLo62GjfKDYIN7eJpPB",
        },
        "features": {
          "acousticness": 0.123,
          "analysis_url": "https://api.spotify.com/v1/audio-analysis/3LnoLo62GjfKDYIN7eJpPB",
          "danceability": 0.416,
          "duration_ms": 311625,
          "energy": 0.615,
          "id": "3LnoLo62GjfKDYIN7eJpPB",
          "instrumentalness": 0.00171,
          "key": 5,
          "liveness": 0.273,
          "loudness": -7.898,
          "mode": 1,
          "speechiness": 0.0452,
          "tempo": 130.228,
          "time_signature": 4,
          "track_href": "https://api.spotify.com/v1/tracks/3LnoLo62GjfKDYIN7eJpPB",
          "type": "audio_features",
          "uri": "spotify:track:3LnoLo62GjfKDYIN7eJpPB",
          "valence": 0.181,
        },
        "genres": [
          [
            "edm",
            "electronic trap",
            "electropop",
            "future bass",
            "pop dance",
            "pop edm",
            "vapor twitch",
          ],
          [
            "vapor twitch",
          ],
        ],
        "href": "https://api.spotify.com/v1/tracks/3LnoLo62GjfKDYIN7eJpPB",
        "id": "3LnoLo62GjfKDYIN7eJpPB",
        "is_local": false,
        "name": "you’ve changed, i’ve changed",
        "popularity": 54,
        "preview_url": "https://p.scdn.co/mp3-preview/1aed4e1e70002107db4b055082a63c4b4abac4ce?cid=f40c6b31fa764aa3aad3665a54b14ffa",
        "track_number": 19,
        "type": "track",
        "uri": "spotify:track:3LnoLo62GjfKDYIN7eJpPB",
      },
    },
    {
      "added_at": "2021-09-30T22:04:57Z",
      "track": {
        "album": {
          "album_type": "single",
          "artists": [
            {
              "external_urls": {
                "spotify": "https://open.spotify.com/artist/5Ho1vKl1Uz8bJlk4vbmvmf",
              },
              "href": "https://api.spotify.com/v1/artists/5Ho1vKl1Uz8bJlk4vbmvmf",
              "id": "5Ho1vKl1Uz8bJlk4vbmvmf",
              "name": "Amelie Lens",
              "type": "artist",
              "uri": "spotify:artist:5Ho1vKl1Uz8bJlk4vbmvmf",
            },
          ],
          "available_markets": [
            "AD",
            "AE",
            "AG",
            "AL",
            "AM",
            "AO",
            "AR",
            "AT",
            "AU",
            "AZ",
            "BA",
            "BB",
            "BD",
            "BE",
            "BF",
            "BG",
            "BH",
            "BI",
            "BJ",
            "BN",
            "BO",
            "BR",
            "BS",
            "BT",
            "BW",
            "BY",
            "BZ",
            "CA",
            "CD",
            "CG",
            "CH",
            "CI",
            "CL",
            "CM",
            "CO",
            "CR",
            "CV",
            "CY",
            "CZ",
            "DE",
            "DJ",
            "DK",
            "DM",
            "DO",
            "DZ",
            "EC",
            "EE",
            "EG",
            "ES",
            "FI",
            "FJ",
            "FM",
            "FR",
            "GA",
            "GB",
            "GD",
            "GE",
            "GH",
            "GM",
            "GN",
            "GQ",
            "GR",
            "GT",
            "GW",
            "GY",
            "HK",
            "HN",
            "HR",
            "HT",
            "HU",
            "ID",
            "IE",
            "IL",
            "IN",
            "IQ",
            "IS",
            "IT",
            "JM",
            "JO",
            "JP",
            "KE",
            "KG",
            "KH",
            "KI",
            "KM",
            "KN",
            "KR",
            "KW",
            "KZ",
            "LA",
            "LB",
            "LC",
            "LI",
            "LK",
            "LR",
            "LS",
            "LT",
            "LU",
            "LV",
            "LY",
            "MA",
            "MC",
            "MD",
            "ME",
            "MG",
            "MH",
            "MK",
            "ML",
            "MN",
            "MO",
            "MR",
            "MT",
            "MU",
            "MV",
            "MW",
            "MX",
            "MY",
            "MZ",
            "NA",
            "NE",
            "NG",
            "NI",
            "NL",
            "NO",
            "NP",
            "NR",
            "NZ",
            "OM",
            "PA",
            "PE",
            "PG",
            "PH",
            "PK",
            "PL",
            "PS",
            "PT",
            "PW",
            "PY",
            "QA",
            "RO",
            "RS",
            "RU",
            "RW",
            "SA",
            "SB",
            "SC",
            "SE",
            "SG",
            "SI",
            "SK",
            "SL",
            "SM",
            "SN",
            "SR",
            "ST",
            "SV",
            "SZ",
            "TD",
            "TG",
            "TH",
            "TJ",
            "TL",
            "TN",
            "TO",
            "TR",
            "TT",
            "TV",
            "TW",
            "TZ",
            "UA",
            "UG",
            "US",
            "UY",
            "UZ",
            "VC",
            "VE",
            "VN",
            "VU",
            "WS",
            "XK",
            "ZA",
            "ZM",
            "ZW",
          ],
          "external_urls": {
            "spotify": "https://open.spotify.com/album/0vlWyzbAl3ff9b3zout1XQ",
          },
          "href": "https://api.spotify.com/v1/albums/0vlWyzbAl3ff9b3zout1XQ",
          "id": "0vlWyzbAl3ff9b3zout1XQ",
          "images": [
            {
              "height": 640,
              "url": "https://i.scdn.co/image/ab67616d0000b2733ee99317492d1e68c0444bcc",
              "width": 640,
            },
            {
              "height": 300,
              "url": "https://i.scdn.co/image/ab67616d00001e023ee99317492d1e68c0444bcc",
              "width": 300,
            },
            {
              "height": 64,
              "url": "https://i.scdn.co/image/ab67616d000048513ee99317492d1e68c0444bcc",
              "width": 64,
            },
          ],
          "name": "Stay With Me",
          "release_date": "2017-12-15",
          "release_date_precision": "day",
          "total_tracks": 4,
          "type": "album",
          "uri": "spotify:album:0vlWyzbAl3ff9b3zout1XQ",
        },
        "artists": [
          {
            "external_urls": {
              "spotify": "https://open.spotify.com/artist/5Ho1vKl1Uz8bJlk4vbmvmf",
            },
            "href": "https://api.spotify.com/v1/artists/5Ho1vKl1Uz8bJlk4vbmvmf",
            "id": "5Ho1vKl1Uz8bJlk4vbmvmf",
            "name": "Amelie Lens",
            "type": "artist",
            "uri": "spotify:artist:5Ho1vKl1Uz8bJlk4vbmvmf",
          },
        ],
        "available_markets": [
          "AD",
          "AE",
          "AG",
          "AL",
          "AM",
          "AO",
          "AR",
          "AT",
          "AU",
          "AZ",
          "BA",
          "BB",
          "BD",
          "BE",
          "BF",
          "BG",
          "BH",
          "BI",
          "BJ",
          "BN",
          "BO",
          "BR",
          "BS",
          "BT",
          "BW",
          "BY",
          "BZ",
          "CA",
          "CD",
          "CG",
          "CH",
          "CI",
          "CL",
          "CM",
          "CO",
          "CR",
          "CV",
          "CY",
          "CZ",
          "DE",
          "DJ",
          "DK",
          "DM",
          "DO",
          "DZ",
          "EC",
          "EE",
          "EG",
          "ES",
          "FI",
          "FJ",
          "FM",
          "FR",
          "GA",
          "GB",
          "GD",
          "GE",
          "GH",
          "GM",
          "GN",
          "GQ",
          "GR",
          "GT",
          "GW",
          "GY",
          "HK",
          "HN",
          "HR",
          "HT",
          "HU",
          "ID",
          "IE",
          "IL",
          "IN",
          "IQ",
          "IS",
          "IT",
          "JM",
          "JO",
          "JP",
          "KE",
          "KG",
          "KH",
          "KI",
          "KM",
          "KN",
          "KR",
          "KW",
          "KZ",
          "LA",
          "LB",
          "LC",
          "LI",
          "LK",
          "LR",
          "LS",
          "LT",
          "LU",
          "LV",
          "LY",
          "MA",
          "MC",
          "MD",
          "ME",
          "MG",
          "MH",
          "MK",
          "ML",
          "MN",
          "MO",
          "MR",
          "MT",
          "MU",
          "MV",
          "MW",
          "MX",
          "MY",
          "MZ",
          "NA",
          "NE",
          "NG",
          "NI",
          "NL",
          "NO",
          "NP",
          "NR",
          "NZ",
          "OM",
          "PA",
          "PE",
          "PG",
          "PH",
          "PK",
          "PL",
          "PS",
          "PT",
          "PW",
          "PY",
          "QA",
          "RO",
          "RS",
          "RU",
          "RW",
          "SA",
          "SB",
          "SC",
          "SE",
          "SG",
          "SI",
          "SK",
          "SL",
          "SM",
          "SN",
          "SR",
          "ST",
          "SV",
          "SZ",
          "TD",
          "TG",
          "TH",
          "TJ",
          "TL",
          "TN",
          "TO",
          "TR",
          "TT",
          "TV",
          "TW",
          "TZ",
          "UA",
          "UG",
          "US",
          "UY",
          "UZ",
          "VC",
          "VE",
          "VN",
          "VU",
          "WS",
          "XK",
          "ZA",
          "ZM",
          "ZW",
        ],
        "disc_number": 1,
        "duration_ms": 337500,
        "explicit": false,
        "external_ids": {
          "isrc": "DESR41700154",
        },
        "external_urls": {
          "spotify": "https://open.spotify.com/track/5UsfWcP6SThHlZ4oAgx7ge",
        },
        "features": {
          "acousticness": 0.0375,
          "analysis_url": "https://api.spotify.com/v1/audio-analysis/5UsfWcP6SThHlZ4oAgx7ge",
          "danceability": 0.725,
          "duration_ms": 337500,
          "energy": 0.908,
          "id": "5UsfWcP6SThHlZ4oAgx7ge",
          "instrumentalness": 0.822,
          "key": 7,
          "liveness": 0.108,
          "loudness": -8.798,
          "mode": 1,
          "speechiness": 0.0345,
          "tempo": 128.006,
          "time_signature": 4,
          "track_href": "https://api.spotify.com/v1/tracks/5UsfWcP6SThHlZ4oAgx7ge",
          "type": "audio_features",
          "uri": "spotify:track:5UsfWcP6SThHlZ4oAgx7ge",
          "valence": 0.134,
        },
        "genres": [
          [
            "acid techno",
            "belgian techno",
            "dark techno",
            "electra",
          ],
        ],
        "href": "https://api.spotify.com/v1/tracks/5UsfWcP6SThHlZ4oAgx7ge",
        "id": "5UsfWcP6SThHlZ4oAgx7ge",
        "is_local": false,
        "name": "Follow",
        "popularity": 51,
        "preview_url": "https://p.scdn.co/mp3-preview/01b567c484fdfae17ff4fcd7e8a9f220a461815f?cid=f40c6b31fa764aa3aad3665a54b14ffa",
        "track_number": 1,
        "type": "track",
        "uri": "spotify:track:5UsfWcP6SThHlZ4oAgx7ge",
      },
    },
  ],
}
`;

exports[`Library gets items since date 1`] = `
{
  "meta": {
    "date_generated": "1970-01-01T00:00:00.000Z",
    "saved_tracks_output_type": "light",
  },
  "tracks": [
    {
      "added_at": "2021-12-06T17:17:57Z",
      "track": {
        "album": {
          "id": "6Ozmnoay8pclUfUO8CWKLU",
          "name": "The Age Of Love (Charlotte de Witte & Enrico Sangiuliano Remix)",
        },
        "artists": [
          {
            "id": "03tes5RhEvH2dX2eDeGnRn",
            "name": "Age Of Love",
          },
          {
            "id": "1lJhME1ZpzsEa5M0wW6Mso",
            "name": "Charlotte de Witte",
          },
          {
            "id": "1u7DsNFbakULvxnDGtMm90",
            "name": "Enrico Sangiuliano",
          },
        ],
        "id": "6X6Ow0iioCrYQSK1QDHQbC",
        "name": "The Age Of Love - Charlotte de Witte & Enrico Sangiuliano Remix",
      },
    },
  ],
}
`;

exports[`Library gets n most recent items 1`] = `
{
  "meta": {
    "date_generated": "1970-01-01T00:00:00.000Z",
    "saved_tracks_output_type": "light",
  },
  "tracks": [
    {
      "added_at": "2021-12-06T17:17:57Z",
      "track": {
        "album": {
          "id": "6Ozmnoay8pclUfUO8CWKLU",
          "name": "The Age Of Love (Charlotte de Witte & Enrico Sangiuliano Remix)",
        },
        "artists": [
          {
            "id": "03tes5RhEvH2dX2eDeGnRn",
            "name": "Age Of Love",
          },
          {
            "id": "1lJhME1ZpzsEa5M0wW6Mso",
            "name": "Charlotte de Witte",
          },
          {
            "id": "1u7DsNFbakULvxnDGtMm90",
            "name": "Enrico Sangiuliano",
          },
        ],
        "id": "6X6Ow0iioCrYQSK1QDHQbC",
        "name": "The Age Of Love - Charlotte de Witte & Enrico Sangiuliano Remix",
      },
    },
    {
      "added_at": "2021-10-18T08:15:08Z",
      "track": {
        "album": {
          "id": "046wH7DEfUumC5h9ykIEkd",
          "name": "bb u ok?",
        },
        "artists": [
          {
            "id": "0jNDKefhfSbLR9sFvcPLHo",
            "name": "San Holo",
          },
          {
            "id": "1BjaGDkxwa2fb2pSCXlFXb",
            "name": "Chet Porter",
          },
        ],
        "id": "3LnoLo62GjfKDYIN7eJpPB",
        "name": "you’ve changed, i’ve changed",
      },
    },
  ],
}
`;

exports[`Library gets saved tracks light 1`] = `
{
  "meta": {
    "date_generated": "1970-01-01T00:00:00.000Z",
    "saved_tracks_output_type": "light",
  },
  "tracks": [
    {
      "added_at": "2021-12-06T17:17:57Z",
      "track": {
        "album": {
          "id": "6Ozmnoay8pclUfUO8CWKLU",
          "name": "The Age Of Love (Charlotte de Witte & Enrico Sangiuliano Remix)",
        },
        "artists": [
          {
            "id": "03tes5RhEvH2dX2eDeGnRn",
            "name": "Age Of Love",
          },
          {
            "id": "1lJhME1ZpzsEa5M0wW6Mso",
            "name": "Charlotte de Witte",
          },
          {
            "id": "1u7DsNFbakULvxnDGtMm90",
            "name": "Enrico Sangiuliano",
          },
        ],
        "id": "6X6Ow0iioCrYQSK1QDHQbC",
        "name": "The Age Of Love - Charlotte de Witte & Enrico Sangiuliano Remix",
      },
    },
    {
      "added_at": "2021-10-18T08:15:08Z",
      "track": {
        "album": {
          "id": "046wH7DEfUumC5h9ykIEkd",
          "name": "bb u ok?",
        },
        "artists": [
          {
            "id": "0jNDKefhfSbLR9sFvcPLHo",
            "name": "San Holo",
          },
          {
            "id": "1BjaGDkxwa2fb2pSCXlFXb",
            "name": "Chet Porter",
          },
        ],
        "id": "3LnoLo62GjfKDYIN7eJpPB",
        "name": "you’ve changed, i’ve changed",
      },
    },
    {
      "added_at": "2021-09-30T22:04:57Z",
      "track": {
        "album": {
          "id": "0vlWyzbAl3ff9b3zout1XQ",
          "name": "Stay With Me",
        },
        "artists": [
          {
            "id": "5Ho1vKl1Uz8bJlk4vbmvmf",
            "name": "Amelie Lens",
          },
        ],
        "id": "5UsfWcP6SThHlZ4oAgx7ge",
        "name": "Follow",
      },
    },
  ],
}
`;
